--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 	<video width="320" height="240" controls>
-		<source src="output/test.mp4" type="video/mp4">
+		<source src="output/test.webm" type="video/mp4">
 	</video>
 </html>
